[tool.poetry]
name = "Reef-Bot"
version = "0.1.0"
description = "This is a twitter bot using the tweepy API to track current events or information revolving around all ocean reefs."
authors = ["Jake Sanchez <sanchezjake68@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
certifi = "2020.4.5.1"
chardet = "3.0.4"
idna = "2.9"
oauthlib = "3.1.0"
PySocks = "1.7.1"
requests = "2.23.0"
requests-oauthlib = "1.3.0"
six = "1.15.0"
tweepy = "3.8.0"
urllib3 = "1.25.9"
pytest = "^5.4.3"

[tool.poetry.dev-dependencies]
